# PromptLens

./: .gitignore  README.md
api/: README.md  database.py  embedding_service.py  main.py  pyproject.toml  pytest.ini  run_tests.py
api/sql_helpers/: add_cached_query_id.sql  add_keywords_column.sql  add_rating_column.sql  match_queries.sql
api/test_files/: test_database.py  test_embedding.py  test_generate_endpoint.py  test_simple.py
dummy-gpt/: README.md  package-lock.json  package.json
dummy-gpt/app/: globals.css  page.tsx
dummy-gpt/app/api/chat/: route.ts
dummy-gpt/components/: chat-interface.tsx  provider-selector.tsx
dummy-gpt/src/app/: globals.css  layout.tsx  page.tsx
dummy-gpt/src/app/api/chat/: route.ts
dummy-gpt/src/components/: ChatInterface.tsx  LLMSettings.tsx  MessageBubble.tsx  MessageInput.tsx  MessageList.tsx
dummy-gpt/src/types/: chat.ts
promptlens-site/promptlens/: QUERY_HISTORY_README.md  package-lock.json  package.json
promptlens-site/promptlens/app/: globals.css  layout.tsx  page.tsx
promptlens-site/promptlens/app/login/: page.tsx
promptlens-site/promptlens/app/saved/: page.tsx
promptlens-site/promptlens/components/: advanced-filters.tsx  chat-data-browser.tsx  dashboard.tsx  faq-modal.tsx  natural-language-query.tsx  protected-route.tsx  save-visualization-modal.tsx  sidebar.tsx  view-visualization-modal.tsx
promptlens-site/promptlens/lib/: auth-context.tsx  data-service.ts  generate-graphs.ts  mock-data.ts  supabase.ts  types.ts
promptlens-site/promptlens/sql/: create_query_history.sql  create_saved_visualizations.sql
(+17 files in other folders)
