[project]
name = "simple-api"
version = "1.0.0"
description = "A simple FastAPI template"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "supabase>=2.0.0",
    "python-dotenv>=1.0.0",
    "cryptography>=45.0.7",
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.24.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.black]
line-length = 88
target-version = ["py38"]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "faker>=35.2.2",
    "httpx>=0.27.2",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.1",
    "requests-mock>=1.12.1",
]
